--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
       </div>
       <div class="reviews-container">
         <article class="reviews-card">
-          <img src="Images/pers1.png" alt="this is person photo" loading="lazy">
+          <img src="images/pers1.png" alt="this is person photo" loading="lazy">
           <div class="reviews-info">
             <h4>Larra Nasser</h4>
             <span>Junior Front-End Developer</span>
@@ -389,7 +389,7 @@
           </div>
         </article>
         <div class="reviews-card">
-          <img src="Images/pers2.png" alt="this is person photo" loading="lazy">
+          <img src="images/pers2.png" alt="this is person photo" loading="lazy">
           <div class="reviews-info">
             <h4>Mariam Hassan</h4>
             <span>Marketing Specialist</span>
@@ -398,7 +398,7 @@
           </div>
         </div>
         <div class="reviews-card">
-          <img src="Images/pers3.png" alt="this is person photo" loading="lazy">
+          <img src="images/pers3.png" alt="this is person photo" loading="lazy">
           <div class="reviews-info">
             <h4>Omar Khalid</h4>
             <span>Software Engineer</span>
@@ -407,7 +407,7 @@
           </div>
         </div>
         <div class="reviews-card">
-          <img src="Images/pers4.png" alt="this is person photo" loading="lazy">
+          <img src="images/pers4.png" alt="this is person photo" loading="lazy">
           <div class="reviews-info">
             <h4>Mostafa Adel</h4>
             <span>Fresh Graduate</span>
