--- a/protofolio.html
+++ b/protofolio.html
@@ -101,7 +101,7 @@
         <h2><span class="typing">Front-End Developer</span></h2>
         <p class="description">I build interactive, responsive, and user-friendly web applications using modern frontend
           technologies.</p>
-        <button>View My Work</button>
+        <button><a href="#" download="cv.pdf" >Download CV</a></button>
       </div>
       <div class="shapes">
         <div class="shape circle"></div>
@@ -432,48 +432,48 @@
 
       <div class="projects-container">
         <div class="project-card">
-          <img src="Images/project1.png" alt="Smart CV Website" loading="lazy">
+          <img src="images/project1.png" alt="Smart CV Website" loading="lazy">
           <h3>Smart CV Website</h3>
           <p>A personal website showcasing my projects, skills, and contact information.</p>
           <button>View Project</button>
         </div>
 
         <div class="project-card">
-          <img src="Images/project2.png" alt="Todo App" loading="lazy">
+          <img src="images/project2.png" alt="Todo App" loading="lazy">
           <h3>Todo App</h3>
           <p>A simple and responsive task manager with add, edit, and delete functionality.</p>
           <button>View Project</button>
         </div>
 
         <div class="project-card">
-          <img src="Images/project3.png" alt="E-Commerce Store" loading="lazy">
+          <img src="images/project3.png" alt="E-Commerce Store" loading="lazy">
           <h3>E-Commerce Store</h3>
           <p>Online shopping platform with product listing, cart, and checkout features.</p>
           <button>View Project</button>
         </div>
 
         <div class="project-card">
-          <img src="Images/project4.png" alt="Weather App" loading="lazy">
+          <img src="images/project4.png" alt="Weather App" loading="lazy">
           <h3>Weather App</h3>
           <p>Displays real-time weather information using a public API.</p>
           <button>View Project</button>
         </div>
 
         <div class="project-card">
-          <img src="Images/project5.png" alt="Blog Platform" loading="lazy">
+          <img src="images/project5.png" alt="Blog Platform" loading="lazy">
           <h3>Blog Platform</h3>
           <p>A platform for writing, editing, and sharing articles with user authentication.</p>
           <button>View Project</button>
         </div>
         <div class="project-card">
-          <img src="Images/project6.png" alt="Recipe Finder" loading="lazy">
+          <img src="images/project6.png" alt="Recipe Finder" loading="lazy">
           <h3>Recipe Finder</h3>
           <p>Search for recipes by ingredients and save favorites for later.</p>
           <button>View Project</button>
         </div>
 
         <div class="project-card">
-          <img src="Images/project7.png" alt="Virtual Event Planner" loading="lazy">
+          <img src="images/project7.png" alt="Virtual Event Planner" loading="lazy">
           <h3>Virtual Event Planner</h3>
           <p>An interactive platform to create, manage, and host virtual events with schedule, registration,
             and live chat features.</p>
@@ -481,7 +481,7 @@
         </div>
 
         <div class="project-card">
-          <img src="Images/project8.png" alt="Portfolio Analyzer" loading="lazy">
+          <img src="images/project8.png" alt="Portfolio Analyzer" loading="lazy">
           <h3>Portfolio Analyzer</h3>
           <p>A web app that analyzes your portfolio projects, generates insights, and helps track progress
             over time.</p>
