--- a/protofolio.html
+++ b/protofolio.html
@@ -112,7 +112,7 @@
         <div class="shape small-circle-top"></div>
       </div>
     </section>
-    <section class="skill_section ">
+    <section class="skill_section " id="skills">
       
       <h2>SKILLS & <span>EXPERTISE</span> </h2>
 
@@ -302,7 +302,7 @@
     </section>
 
 
-    <section class="journey">
+    <section class="journey" id="journey">
 
       <div class="Sidebar">
         <h3>My Journey</h3>
@@ -425,7 +425,7 @@
 
     </section>
 
-    <section class="projects">
+    <section class="projects" id='projects'>
       <div class="title">
         <h2>Projects</h2>
       </div>
