--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <div class="group1 phone ">
               <label for="phone">Phone Number</label>
-              <input id="phone" type="tel" name="phone" pattern="^[0-9]{11}$" title="Enter 11 digits required ">
+              <input id="phone" type="tel" name="phone" pattern="^[0-9]{11}$" title="Enter 11 digits   ">
             </div>
 
             <div class="group1 lin ">
@@ -339,7 +339,7 @@
 
             <div class="levels">
               <label for="level">Level</label>
-              <select required name="level" id="level">
+              <select  name="level" id="level">
                 <option value="" disabled selected>Select</option>
                 <option value="beginner">Beginner</option>
                 <option value="intermediate">Intermediate</option>
