--- a/protofolio.html
+++ b/protofolio.html
@@ -101,7 +101,7 @@
         <h2><span class="typing">Front-End Developer</span></h2>
         <p class="description">I build interactive, responsive, and user-friendly web applications using modern frontend
           technologies.</p>
-        <button><a href="./cv.pdf" download >Download CV</a></button>
+        <button><a href="./cv.pdf" downloade >Download CV</a></button>
       </div>
       <div class="shapes">
         <div class="shape circle"></div>
